--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
     border-width: 7px;
     border-color: #F85A40;
     position: absolute;
-    margin-top: 60px;
+    /* margin-top: 60px; */
 }
 
 .card-body .custom-hr{
@@ -77,5 +77,14 @@ body{
     border-width: 7px;
     border-color: #F85A40;
     position: absolute;
-    margin-top: 90px;
+    /* margin-top: 90px; */
+}
+
+.doc_link {
+    color: #F85A40;
+    font-weight: 700;
+}
+
+.border-end{
+    color: black;
 }
